--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
+    "nodemailer": "^3.1.1",
     "serve-favicon": "~2.3.0"
   }
 }
