--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
+    "node-sass": "^4.5.0",
     "node-sass-middleware": "0.9.8",
     "nodemailer": "^3.1.1",
     "serve-favicon": "~2.3.0"
